1999-12-07  Martin Baulig  <martin@home-of-linux.org>

	* libgnomeui.h: Don't include "gnome-compat.h" which does no longer
	exist.

1999-12-05  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dialog.c (gnome_dialog_button_clicked): no need for saving
	click_closes as gnome_dialog_clicked() takes care of this.
	* Makefile.am: changed all references to gdk-pixbuf/src to
	gdk-pixbuf/gdk-pixbuf.
	
1999-12-04  Elliot Lee  <sopwith@redhat.com>

	* gtkpixmapmenuitem.c: Fix size_request/size_allocate - was HORRIBLY broken before.

1999-12-01  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas-pixbuf.h, gnome-canvas-pixbuf.c: Copy latest
	version from gdk-pixbuf.  gdk-pixbuf has the master copy; do not
	modify this libgnomeui copy.

	* gnome-dialog.c (gnome_dialog_clicked): New function, 
	emits the "clicked" signal

Mon Nov 29 09:17:02 1999  Dietmar Maurer  <dm@vlsivie.tuwien.ac.at>

	* gnome-app-helper.c: use GNOME_APP_PIXMAP_NONE instead of the
          blank stock pixmap for configurable items.

1999-11-28  Havoc Pennington  <hp@pobox.com>

	* gnome-pixmap.h: include gdk-pixbuf before gnome-defs, seems to
	be required for some reason. 
	
        The below is all still wrong; if you have a gdk-pixbuf installed
	it will probably use the wrong one.
	
	* gnome-pixmap.c: angle

	* gnome-color-picker.h: angle brackets

	* gnome-icon-entry.c: <gdk-pixbuf/gdk-pixbuf.h>

	* gnome-canvas-pixbuf.c: angle brackets

	* gnome-calculator.c: angle brackets

	* Makefile.am (INCLUDES): Put $(top_srcdir)/gdk-pixbuf at the top
	of the include list; remove $(top_srcdir)/src from the search path.

	* gnome-pixmap.h: put gdk-pixbuf/gdk-pixbuf.h in angle brackets

1999-11-24  Elliot Lee  <sopwith@redhat.com>

	* gnome-app.c (gnome_app_add_dock_item): emit the "layout_changed" signal even if adding the dock item to app->layout.

1999-11-23  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid-page-edge.c (gnome_druid_page_edge_new): new