@@ -1,5 +1,7 @@
 1999-12-07  Martin Baulig  <martin@home-of-linux.org>
 
+	* Makefile.am: Removed all HistoryDB stuff.
+
 	* libgnomeui.h: Don't include "gnome-compat.h" which does no longer
 	exist.
 
